tests/broken/writ-unclosed-tag.stderr
error: Expecting the writ tag to be closed with `_}}`, `-}}`, or `}}`.
 --> tests/broken/writ-unclosed-tag.rs:4:27
  |
4 | #[oxiplate_inline = "{{ foo"]
  |                           ^
